# Learning_Managment_System

./: README.md
Doxygen Documentation/: _database_8cpp.html  _database_8cpp__incl.dot  _database_8h.html  _database_8h.js  _database_8h__dep__incl.dot  _database_8h__incl.dot  _database_8h_source.html  add__course__menu_8cpp.html  add__course__menu_8cpp__incl.dot  add__course__menu_8h.html  add__course__menu_8h.js  add__course__menu_8h__dep__incl.dot  add__course__menu_8h__incl.dot  add__course__menu_8h_source.html  add__prof__menu_8cpp.html  add__prof__menu_8h.html  add__prof__menu_8h.js  add__prof__menu_8h_source.html  add__stud__menu_8cpp.html  add__stud__menu_8cpp__incl.dot  add__stud__menu_8h.html  add__stud__menu_8h.js  add__stud__menu_8h__dep__incl.dot  add__stud__menu_8h__incl.dot  add__stud__menu_8h_source.html  annotated.html  annotated_dup.js  class_add__course__menu-members.html  class_add__course__menu.html  class_add__course__menu.js  class_add__course__menu__inherit__graph.dot  class_courseinfo-members.html  class_courseinfo.html  class_courseinfo.js  class_courseinfo__coll__graph.dot  class_dashboard-members.html  class_dashboard.html  class_dashboard.js  class_dashboard__coll__graph.dot  class_dashboard__inherit__graph.dot  (+183 more)
ExportedData/: data.csv
Final Project/: CMakeLists.txt  Database.h  add_course_menu.cpp  add_course_menu.h  add_course_menu.ui  add_prof_menu.cpp  add_prof_menu.h  add_prof_menu.ui  add_stud_menu.cpp  add_stud_menu.h  add_stud_menu.ui  course.cpp  course.h  (+35 more)
Project/: CMakeLists.txt  CMakeLists.txt.user.9b188d1  Database.cpp  Database.h  Resources.qrc  add_course_menu.cpp  add_course_menu.h  add_course_menu.ui  add_prof_menu.cpp  add_prof_menu.h  add_prof_menu.ui  add_stud_menu.cpp  add_stud_menu.h  add_stud_menu.ui  course.cpp  course.h  courseinfo.cpp  courseinfo.h  courseinfo.ui  coursemenu.cpp  coursemenu.h  coursemenu.ui  dashboard.cpp  dashboard.h  dashboard.ui  error.cpp  error.h  error.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  member.cpp  member.h  new_admin.cpp  new_admin.h  new_admin.ui  professor.cpp  professor.h  profinfo.cpp  (+14 more)
Project/data/: data.csv
(+1627 files in other folders)
